Add get-Photo in API
